--- a/templates/login.html
+++ b/templates/login.html
@@ -13,36 +13,35 @@
                 <form action="{{ request.path }}" method="POST" class="row g-3" id = "color">
                     {{ form.csrf_token }}
 
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+                    {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    {% endwith %}
+
+
 
                     <h4 class="text-black">Log In</h4>
 
 
 
                     <div class="col-12">
-                        {{ render_field(form.username, class="form-control") }}
+                        {{ render_field(form.email, class="form-control") }}
                         <!--label>Email:</label>
                             <input type="text" name="email" class="form-control" placeholder="Email"-->
                     </div>
-
-                    {% for error in form.username.errors %}
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                        {{ error }}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                    {% endfor%}
 
                     <div class="col-12">
                         {{ render_field(form.password, class="form-control") }}
                         <!--label>Password:</label>
                             <input type="password" name="password" class="form-control" placeholder="Password"-->
                     </div>
-
-                    {% for error in form.password.errors %}
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                        {{ error }}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                    {% endfor%}
 
                     <div class="col-12">
                         <button type="submit" class="btn btn-dark float-end">Login</button>
