--- a/templates/Post.html
+++ b/templates/Post.html
@@ -6,7 +6,7 @@
 {% extends "default_base.html" %}
 {% endif %}
 {% block head %}
-<link rel="stylesheet" href="static/CSS/alisa/feedback.css">
+
 {% endblock %}
 {% block title %}Feedback Form | DoctorOnTheGo{% endblock %}
 
@@ -14,30 +14,50 @@
 {% from "includes/_formHelper.html" import render_field %}
 <div class="intro">
     <div class="intro-text">
-        <h1>Feedback Form</h1>
-        <p>Use this form to send Feedback to us about any thing your displeased with</p>
+        <h1>Create Post</h1>
+
         <p>Click <a href="/help">here</a> to return to the previous page.
     </div>
 </div>
 <div class="form">
+
         <div class="col">
             <div class="login-form bg-colour mt-6 p-4" id="feedbackForm">
-                <form action="" method="POST" class="row g-3">
+                <form action="{{ request.path }}" method="POST" class="row g-3" enctype="multipart/form-data">
+
                     {{ form.csrf_token }}
                     <div class="col-12">
                         {{ render_field(form.Post_Name, class="form-control") }}
                     </div>
-                    <div class = "col-12">
-                         {{ form.hidden_tag() }}
-                         {{ form.file }}
+
+                    <div class="col-12">
+                        {{ render_field(form.Post_Description, class="form-control") }}
                     </div>
+
+
+                    <div class="form-group  col-12">
+                             <label for="inputFile">File input</label>
+                             <input class="form-control-file" type="file" name="inputFile">
+                    </div>
+
+        <!-- Location -->
+                   <div class="form-group col-12">
+                        <label for="location">Location</label>
+                       <input class="form-control" type="text" name="location">
+                   </div>
+
+
                     <br>
+
                     <div class="form-group col-md-12 pl-3 pr-3">
+                        <form action = "home">
                         <input type="submit" value="Submit" class="btn btn-primary"/>
+                        </form>
                     </div>
                 </form>
             </div>
         </div>
+
 
 </div>
 
